# sentinel-ai

./: .gitignore  README.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: main.rs
backend/: requirements.txt
backend/app/: main.py  test_main.py
dashboard/: dashboard.py  requirements.txt
docs/: MVP_SPEC.md
